# PLMLoF

./: .dockerignore  .gitignore  Dockerfile  README.md  plan.md  pyproject.toml  requirements.txt
configs/: inference.yaml  model.yaml  runpod_model.yaml  runpod_training.yaml  training.yaml
data/scripts/: curate_dataset.py  download_card.py  download_deg.py  download_proteingym.py  generate_synthetic.py
plmlof/: __init__.py
plmlof/data/: collator.py  dataset.py  features.py  preprocessing.py
plmlof/inference/: attribution.py  predictor.py  reference_cache.py  vcf_handler.py
plmlof/models/: __init__.py  classifier.py  comparison.py  esm2_encoder.py  plmlof_model.py
plmlof/training/: metrics.py  trainer.py
plmlof/utils/: sequence_utils.py
runpod/: README.md  download_models.sh  env.sh  run_all.sh  setup.sh
scripts/: benchmark_baselines.py  benchmark_vs_snpeff.py  evaluate.py  precompute_embeddings.py  predict.py  train.py
tests/: conftest.py  test_attribution.py  test_dataset.py  test_features.py  test_model.py  test_predictor.py
